# ssw

./: .gitignore  CLAUDE.md  Caddyfile.local  Cargo.toml  README.md  TODO.md  config.env  deploy.sh  dev.sh  migrate.sh  ssw@.service  subset_fonts.sh
.rwx/: tasks.yml
deploy/: Caddyfile  config.alloy  deploy.sh  setup.sh
migrations/: 001_init.sql  002_interested_users.sql  003_add_ip_address.sql  004_add_unsubscribed_at_to_interested_user.sql
src/: main.rs  stripe.rs
static/: styles.css
static/images/: andrew_kelley.avif  antithesis.avif  beetbox.avif  bubblecup.avif  carson_gross.avif  downtown_pano.avif  fil_pizlo.avif  goldies_bagels.avif  hillel_wayne.avif  irenes.avif  john_murray.avif  kampai.avif  lebao.avif  logboat.avif  logo.avif  logo_padded.avif  lorin_hochstein.avif  mahis.avif  marianne_bellotti.avif  mizzou.avif  mkt.avif  pizza_tree.avif  ray_myers.avif  richard_feldman.avif  richard_hipp.avif  sage-pain-au-chocolat.avif  sparkys.avif  thai_express.avif  tiger_hotel_front2.avif  tiger_hotel_lobby.avif  tiger_hotel_sign.avif
templates/: error.html  footer.html  header.html  index.html  policies.html
