[[bin]]
path = "src/main.rs"
name = "ssw"

[package]
name = "ssw"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
axum = "0.8.7"
chrono = "0.4.42"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

